--- a/LayoutContainer/app/src/main/res/values/colors.xml
+++ b/LayoutContainer/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="grey"> #ebebeb</color>
     <color name="black"> #000000</color>
     <color name="darkgrey"> #C0C0C0</color>
@@ -166,5 +169,4 @@
     <color name="mediumblue">#0000cd</color><!--中兰色 -->
     <color name="darkblue">#00008b</color><!--暗蓝色 -->
     <color name="navy">#000080</color><!--海军色 -->
-
 </resources>
