--- a/AndroidAnimation/app/src/main/res/layout/main.xml
+++ b/AndroidAnimation/app/src/main/res/layout/main.xml
@@ -135,12 +135,11 @@
             android:orientation="horizontal" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dip"
-        android:layout_height="150dip"
-        android:layout_marginLeft="50dip"
-        android:layout_marginTop="50dip"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/aa"
         android:text="Rotating Button" />
 
 </LinearLayout>
